--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Beginning of profile -->
 
     <h2>Profile</h2>
-    <img src="images/headshot.jpg" alt="Rachel Sondergeld's headshot">
+    <img src="images/headshot.jpg" alt="Rachel Sondergeld's headshot" class="headshot">
     <p>My name is Rachel Sondergeld and I am a student in the College of Information at the University
          of Michigan, Ann Arbor. I am pursuing a Bachelor of Science in Information with a 
         focus in user experience research and design. I built this website to display my portfolio, and 
