add contact page

--- a/it.html
+++ b/it.html
@@ -23,6 +23,7 @@
         <a href="resume.html">Resume</a>
         <a href="ux.html">User Experience</a>
         <a class="current" href="it.html">Information Technology</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <!-- Beginning of IT-->
