--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a href="resume.html">Resume</a>
         <a href="ux.html">User Experience</a>
         <a href="it.html">Information Technology</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
 
