--- a/resume.html
+++ b/resume.html
@@ -24,6 +24,7 @@
         <a class="current" href="resume.html">Resume</a>
         <a href="ux.html">User Experience</a>
         <a href="it.html">Information Technology</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <!-- Beginning of resume -->
