--- a/ux.html
+++ b/ux.html
@@ -24,6 +24,7 @@
         <a href="resume.html">Resume</a>
         <a class="current" href="ux.html">User Experience</a>
         <a href="it.html">Information Technology</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <!-- Beginning of UX -->
