Added subnavigation, additional content, and more styling

--- a/overview.html
+++ b/overview.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/html5reset.css">
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Rachel Sondergeld's Resume</title>	
+ <title>User Experience</title>	
 </head>	
 
 <body>
@@ -26,6 +26,7 @@
 
     <div class="subnavigation">
         <button class="subnavbutton">User Experience</button>
+        <!-- class="current" not styling properly -->
         <div class="subnav-content">
             <a href="overview.html">Overview</a>
             <a href="personas.html">Personas</a>
@@ -37,8 +38,12 @@
       </div>
 
     <a href="it.html">Information Technology</a>
-    <a  class="current" href="contact.html">Contact</a>
+    <a href="contact.html">Contact</a>
 </nav>
 
     </div>
-    </div>
+
+    <h2>Project Overview</h2>
+<!-- images -->
+
+<img src="images/slide.png" alt="An overview slide of the TrueDonor project" class="responsive">
