--- a/personas.html
+++ b/personas.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/html5reset.css">
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Rachel Sondergeld's Resume</title>	
+ <title>User Experience</title>	
 </head>	
 
 <body>
@@ -26,19 +26,28 @@
 
     <div class="subnavigation">
         <button class="subnavbutton">User Experience</button>
+        <!-- class="current" not styling properly -->
         <div class="subnav-content">
-            <a href="overview.html">Overview</a>
-            <a href="personas.html">Personas</a>
-            <a href="scenarios.html">Scenarios</a>
-            <a href="ufd.html">User Flow Diagram</a>
-            <a href="ux.html">Final Design</a>
+          <a href="overview.html">Overview</a>
+          <a href="personas.html">Personas</a>
+          <a href="scenarios.html">Scenarios</a>
+          <a href="ufd.html">User Flow Diagram</a>
+          <a href="ux.html">Final Design</a>
+
           
         </div>
       </div>
 
     <a href="it.html">Information Technology</a>
-    <a  class="current" href="contact.html">Contact</a>
+    <a href="contact.html">Contact</a>
 </nav>
 
     </div>
-    </div>
+
+<h2>Personas</h2>
+
+<!-- images -->
+
+<img src="images/persona1.png" alt="An overview of a persona" class="responsive">
+<img src="images/persona2.png" alt="An overview of a persona" class="responsive">
+<img src="images/persona3.png" alt="An overview of a persona" class="responsive">
