--- a/index.html
+++ b/index.html
@@ -6,25 +6,42 @@
   <link rel="stylesheet" href="css/html5reset.css">
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Rachel Sondergeld's Portfolio</title>	
+ <title>Rachel Sondergeld's Portfolio</title>
 </head>	
 
 <body>
 
+    <div class="backgroundimg">
     <!-- Main Header -->
     <h1>Rachel Sondergeld's Portfolio</h1>
+    
 
 <!-- alters nav for small screens -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- main nav -->
-    <nav class="mainnav" id="themainnav">
+    <nav class="mainnav">
         <a class="current" href="index.html">Profile</a>
         <a href="resume.html">Resume</a>
-        <a href="ux.html">User Experience</a>
+        <!-- <a href=>User Experience</a> -->
+
+        <div class="subnavigation">
+            <button class="subnavbutton">User Experience</button>
+            <div class="subnav-content">
+                <a href="overview.html">Overview</a>
+                <a href="personas.html">Personas</a>
+                <a href="scenarios.html">Scenarios</a>
+                <a href="ufd.html">User Flow Diagram</a>
+                <a href="ux.html">Final Design</a>
+              
+            </div>
+          </div>
+
         <a href="it.html">Information Technology</a>
         <a href="contact.html">Contact</a>
     </nav>
+
+        </div>
 
 
     <!-- Beginning of profile -->
