--- a/ux.html
+++ b/ux.html
@@ -10,7 +10,7 @@
 </head>	
 
 <body>
-
+    <div class="backgroundimg">
     <!-- Main Header -->
     <h1>Rachel Sondergeld's Portfolio</h1>
 
@@ -19,17 +19,33 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- main nav -->
-    <nav class="mainnav">
-        <a href="index.html">Profile</a>
-        <a href="resume.html">Resume</a>
-        <a class="current" href="ux.html">User Experience</a>
-        <a href="it.html">Information Technology</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+<nav class="mainnav">
+    <a href="index.html">Profile</a>
+    <a href="resume.html">Resume</a>
+    <!-- <a href=>User Experience</a> -->
+
+    <div class="subnavigation">
+        <button class="subnavbutton">User Experience</button>
+        <!-- class="current" not styling properly -->
+        <div class="subnav-content">
+            <a href="overview.html">Overview</a>
+            <a href="personas.html">Personas</a>
+            <a href="scenarios.html">Scenarios</a>
+            <a href="ufd.html">User Flow Diagram</a>
+            <a href="ux.html">Final Design</a>
+          
+        </div>
+      </div>
+
+    <a href="it.html">Information Technology</a>
+    <a href="contact.html">Contact</a>
+</nav>
+
+    </div>
 
     <!-- Beginning of UX -->
 
-    <h2>User Experience Research and Design</h2>
+    <h2>True Donor Design</h2>
     <h3 class="uxsection">True Donor Project</h3>
 
     <!-- truedonor images -->
